--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-background-color="black" data-active-color="warning">
+        <!--<div class="sidebar" data-background-color="black" data-active-color="warning">
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a href="" class="simple-text">
@@ -34,11 +34,11 @@
                 </div>
                 <sidebar-menu />
             </div>
-        </div>
+        </div>-->
         <div class="main-panel">
-            <nav class="navbar navbar-default">
+            <!--<nav class="navbar navbar-default">
                 <navbar-menu />
-            </nav>
+            </nav>-->
             <div class="content">
                 <ui-view>
                     <p>
