mudancas na view

--- a/app/home/tran/tran.html
+++ b/app/home/tran/tran.html
@@ -1,4 +1,13 @@
-<input type="text" id="descricao"/>
-<input type="text" id="nomeCategoria" />
-<input type="text" id="nomeConta" />
-<input type="text" id="valor" />
+<input type="text" 
+       id="descricao" 
+       placeholder="descrição"
+       value="{tran.descricao}"/>
+<input type="text" 
+       id="nomeCategoria" 
+       placeholder="categoria"/>
+<input type="text" 
+       id="nomeConta" 
+       placeholder="conta"/>
+<input type="text" 
+       id="valor" 
+       placeholder="valor" />
