--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 <body>
     <div class="wrapper">
         <div class="main-panel">
+            alok
             <div class="content">
                 <ui-view>
                     <p>
