--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,9 +2,7 @@
     <div class="row">
         <h2>{{message}}</h2>
         <ul>
-            <li><tran></tran></li>
-            <li><tran></tran></li>
-            <li><tran></tran></li>
+            <li><transacao conta="cartaoCredito"></transacao></li>
         </ul>
     </div>
 </div>
