--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,6 @@
     <!-- App JS Files   -->
     <script src="/lib/angular/angular.min.js"></script>
     <script src="/lib/angular/angular-ui-router.min.js"></script>
-    <script src="app.js"></script>
+    <script src="../app/ngapp.js"></script>
 </body>
 </html>
