--- a/wwwroot/js/app/transacao.html
+++ b/wwwroot/js/app/transacao.html
@@ -1,4 +1,4 @@
-Name: {{obj.name}} Address: {{obj.address}}
+<!--Name: {{obj.name}} Address: {{obj.address}}-->
 
 <input type="text"
        id="descricao"
