--- a/wwwroot/js/app/home.html
+++ b/wwwroot/js/app/home.html
@@ -2,7 +2,8 @@
     <div class="row">
         <h2>{{message}}</h2>
         <ul>
-            <li><transacao conta="cartaoCredito"></transacao></li>
+            <li><transacao></transacao></li>
+            <!--<li><transacao conta="cartaoCredito"></transacao></li>-->
         </ul>
     </div>
 </div>
