--- a/wwwroot/js/app/home/home.html
+++ b/wwwroot/js/app/home/home.html
@@ -1,10 +1,21 @@
 <div class="container-fluid">
     <div class="row">
-        <h2>Transacoes</h2><button ng-click="adicionaTransacao()">nova transacao</button>
+        <h2>Contas</h2>
+        <ul ng-repeat="c in contas">
+            <li><conta cin="c"></conta></li>
+        </ul>
+    </div>
+    <div class="row">
+        <h2>Transacoes</h2>
+        <button ng-click="adicionaTransacao()">nova transacao</button>
         <h3 ng-show="mostraMsgNovaTransacaoEmEdicao">Nova transacao em edicao</h3>
 
-        <ul ng-repeat="t in transacoes">
-            <li><transacao tin="t"></transacao></li>
+        <ul ng-repeat="c in contas | filter: { contaSelecionada: 'true' }">
+            <li>
+                <ul ng-repeat="t in c.transacoes">
+                    <li><transacao tin="t"></transacao></li>
+                </ul>
+            </li>
         </ul>
     </div>
 </div>
