--- a/wwwroot/js/app/home/home.html
+++ b/wwwroot/js/app/home/home.html
@@ -17,5 +17,9 @@
                 </ul>
             </li>
         </ul>
+        <h3>Transacoes ordenadas</h3>
+        <ul ng-repeat="to in transacoesOrdenadas">
+            <li><transacao tin="to"></transacao></li>
+        </ul>
     </div>
 </div>
